oop assignment.java